--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "prettier": "^3.0.0",
     "replace-in-file": "^7.0.1",
     "rollup": "^3.28.1",
+    "rollup-plugin-dts": "^5.3.1",
     "three": "^0.157.0",
     "ts-jest": "^29.1.1",
     "tslib": "^2.6.0",
